[package]
name = "rusty-code"
version = "0.4.0"
edition = "2021"

[dependencies]
detect-lang = "0.1.5"
jsonpath-rust = "0.1.5"
macroquad = "0.3.20"
quad-net = "0.1.1"
quad-url = "0.1.1"
rusty-slider = { git = "https://github.com/ollej/rusty-slider" }
structopt = "0.3.26"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
openssl = { version = "0.10.38", features = ["vendored"] }
# Support reading OS root certs
rustls-native-certs = "0.6.1"

# Support reading OS root certs
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.ureq]
version = "2.4"
features = ["native-certs"]

# Doesn't work with android build
[profile.dev.package.'*']
opt-level = 3

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'
codegen-units = 1

[package.metadata.scripts]
build-web = "bin/build-web"
serve-web = "bin/serve-web"
build-win = "bin/build-win"
build-mac = "bin/build-mac"
build-linux = "bin/build-linux"
