[package]
name = "rusty-code"
version = "0.8.0"
edition = "2024"

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
detect-lang = "0.1.5"
jsonpath-rust = "0.2.0"
macroquad = "0.4"
quad-net = "0.1.1"
quad-url = "0.1.1"
rusty-slider = { version = "0.24", git = "https://github.com/ollej/rusty-slider" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
openssl = { version = "0.10.42", features = ["vendored"] }
# Support reading OS root certs
rustls-native-certs = "0.6.2"

# Support reading OS root certs
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.ureq]
version = "2.5.0"
features = ["native-certs"]

[profile.dev]
debug = 1 # less precise locations

# Doesn't work with android build
[profile.dev.package.'*']
debug = false # no debug symbols for deps
opt-level = 3

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'
codegen-units = 1
strip = true

[package.metadata.scripts]
build-web = "bin/build-web"
serve-web = "bin/serve-web"
build-win = "bin/build-win"
build-mac = "bin/build-mac"
build-linux = "bin/build-linux"
